
  In previous versions the following command line:
  
    --tags @foo,~@bar --tags @zap (on the command line)
  
  or the following Hook:
  
    Before("@foo,~@bar", "@zap") (for Hooks)
  
  would be equivalent to the boolean expression:       (@foo && !@bar) || @zap
  Starting with this release it will be equivalent to: (@foo || !@bar) && @zap

=== Bugfixes
* All features (except 4) pass on 1.9.2 (but not on 1.9.1) (Aslak Hellesøy)
* Add missing require statement in rerun formatter which broke RubyMine (Noah Sussman)

== 0.5.3 2009-12-22

Another small release today to please a sister project. This time Cuke4Nuke.

=== New Features
* Simplified wire protocol to mostly use success / fail responses (Matt Wynne)

== 0.5.2 2009-12-22

=== New Features
* On JRuby/Cuke4Duke, --require DIR will put DIR on the $CLASSPATH, making it easier to load step def classes (Aslak Hellesøy)
* New --jars option that will load jar files. Only available on JRuby. Practical for Cuke4Duke. (Aslak Hellesøy)

=== Bugfixes
* Add #embed back to html formatter (#547 Brandon Faloona)
* Refactored wire protocol code and added configurable timeout to allow for long running step definitions. (#546 Matt Wynne)

== 0.5.1 2009-12-16

Small bugfix release.

=== Bugfixes
* Replaced dependency on json gem with an error message, so that the cucumber gem installs on JRuby. (Aslak Hellesøy)

== 0.5.0 2009-12-15

We're bumping to 0.5.0 for this release since all of the Rails code has now moved to a new gem - cucumber-rails.
Please see History.txt in cucumber-rails for details about what's new on the Rails side.

=== New features
* "Given" in Dutch is now aliased to "Gegeven" or "Stel". (Iain Hecker)
* New --i18n option to list keywords in various languages. (Aslak Hellesøy)
* Added a Tcl example using Sam Stephenson's ruby-tcl (Aslak Hellesøy)
* Added * as a synonym for Given/When/Then/And/But (for all i18n languages). (#462 Aslak Hellesøy)